--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,37 @@
+server:
+  port: 8080
+
+
 spring:
   application:
     name: api-gateway
+
+  cloud:
+    gateway:
+      routes:
+        - id: auth-service
+          uri: http://localhost:8081
+          predicates:
+            - Path=/auth/**
+          filters:
+            - StripPrefix=1
+
+        - id: customer-service
+          uri: http://localhost:8082
+          predicates:
+            - Path=/customer/**
+          filters:
+            - StripPrefix=1
+            - JwtAuthFilter
+
+        - id: loan-service
+          uri: http://localhost:8083
+          predicates:
+            - Path=/loan/**
+          filters:
+            - StripPrefix=1
+            - JwtAuthFilter
+
+jwt:
+  secret: "mySecretKeyForJwtToken123456789"
+
