--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,11 @@
 server:
   port: 8080
 
-
 spring:
   application:
     name: api-gateway
+  main:
+    web-application-type: reactive
 
   cloud:
     gateway:
@@ -22,7 +23,6 @@ spring:
             - Path=/customer/**
           filters:
             - StripPrefix=1
-            - JwtAuthFilter
 
         - id: loan-service
           uri: http://localhost:8083
@@ -30,8 +30,13 @@ spring:
             - Path=/loan/**
           filters:
             - StripPrefix=1
-            - JwtAuthFilter
+
+        - id: test-service
+          uri: http://httpbin.org/status/200
+          predicates:
+            - Path=/test/**
+          filters:
+            - StripPrefix=1
 
 jwt:
   secret: "mySecretKeyForJwtToken123456789"
-
