update JWT secret to a stronger key for enhanced security

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -39,4 +39,4 @@ spring:
             - StripPrefix=1
 
 jwt:
-  secret: "mySecretKeyForJwtToken123456789"
+  secret: "mySuperStrongSecretKeyForJwtToken123456789!"
